objects/Milestone1_Project__c.object
<CustomObject><fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>DB_Days_Start__c</fullName>
        <label>DB Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>DB_Days__c</fullName>
        <label>DB Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Deadline__c</fullName>
        <inlineHelpText>The date by which the project is scheduled to be completed by.</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A general description of the project.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Duration__c</fullName>
        <formula>Deadline__c - Kickoff__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days between Kickoff and Deadline.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>GoogleGanntUrl__c</fullName>
        <inlineHelpText>Calculated.</inlineHelpText>
        <label>GoogleGanntUrl</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Kickoff__c</fullName>
        <inlineHelpText>What date should this project start?</inlineHelpText>
        <label>Kickoff</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Next_Project_Milestone_Due_Date__c</fullName>
        <inlineHelpText>Calculated as the next incomplete task with a due date in this project. This includes sub-milestones.</inlineHelpText>
        <label>Next Project Milestone Due Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Next_Project_Top_Milestone_Due_Date__c</fullName>
        <inlineHelpText>The next incomplete milestone due date. This does not include sub-milestones.</inlineHelpText>
        <label>Next Project Top Milestone Due Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Number_of_Incomplete_Milestones__c</fullName>
        <inlineHelpText>Calculated sum of the number of incomplete milestones assigned to this project. This includes sub-milestones in the project.</inlineHelpText>
        <label>Number of Incomplete Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Number_of_Incomplete_Top_Milestones__c</fullName>
        <inlineHelpText>The number of incomplete milestones that are in this project. This does not count sub-milestones.</inlineHelpText>
        <label>Number of Incomplete Top Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Project_Status_Indicator__c</fullName>
        <formula>IMAGE(CASE( Project_Status__c , "Yellow", "/img/samples/light_yellow.gif", "Green", "/img/samples/light_green.gif", "Red", "/img/samples/light_red.gif","/img/samples/light_red.gif"),"Current Status")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Status Indicator</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Project_stage__c</fullName>
        <label>Project Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Train</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Status_BudgetExpenseSummary__c</fullName>
        <formula>IF( Total_Expense_Budget__c &gt; 0,
IMAGE(
"http://chart.apis.google.com/chart?chtt=Task+Expense+Budget+Analysis&amp;" &amp;
"chxr=0,0," &amp; Text(max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c)) &amp; "&amp;" &amp;
"chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;"&amp;
"chco=2299bb,eeaa66,ee3322,666666&amp;&amp;"&amp;
"chdl="&amp;
"Budget (" &amp; TEXT(Total_Expense_Budget__c) &amp; ")"&amp;
"|Planned (" &amp; TEXT(Total_Expense_Budget_from_Milestones__c) &amp; ")"&amp;
"|Estimated (" &amp; TEXT(Total_Expense_Estimate__c) &amp; ")"&amp;
"|Incurred (" &amp; TEXT(Total_Expense_Incurred__c) &amp; ")"&amp;
"&amp;chd=t:"&amp;
TEXT( Total_Expense_Budget__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100 )&amp;"|"&amp; 
TEXT( Total_Expense_Budget_from_Milestones__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100)  &amp;"|" &amp; 
TEXT( Total_Expense_Estimate__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100 ) &amp;"|" &amp; 
TEXT(  Total_Expense_Incurred__c / max( Total_Expense_Budget__c,Total_Expense_Budget_from_Milestones__c,Total_Expense_Estimate__c, Total_Expense_Incurred__c) * 100) 
, "Project Expense - Budget, Planned, Estimated, Incurred"), '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Summary</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Status_BudgetMiletoneEstimate__c</fullName>
        <formula>"http://chart.apis.google.com/chart?chtt=Task+Time+Budget+Analysis&amp;"&amp;
"chxr=0,0," &amp; Text(max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c)) &amp; "&amp;" &amp;
"chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;"&amp;
"chco=2299bb,eeaa66,ee3322,666666&amp;"&amp;
"chdl="&amp;
"Budget (" &amp; TEXT(Total_Hours_Budget__c) &amp; ")"&amp;
"|Planned (" &amp; TEXT(Total_Hours_Budget_from_Milestones__c) &amp; ")"&amp;
"|Estimated (" &amp; TEXT(Total_Hours_Estimate__c) &amp; ")"&amp;
"|Incurred (" &amp; TEXT(Total_Hours_Incurred__c) &amp; ")"&amp;
"&amp;chd=t:"&amp;
TEXT( Total_Hours_Budget__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100 )&amp;"|"&amp; 
TEXT( Total_Hours_Budget_from_Milestones__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100)  &amp;"|" &amp; 
TEXT( Total_Hours_Estimate__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100 ) &amp;"|" &amp; 
TEXT(  Total_Hours_Incurred__c / max( Total_Hours_Budget__c,Total_Hours_Budget_from_Milestones__c,Total_Hours_Estimate__c, Total_Hours_Incurred__c) * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Summary</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Status_Image_HoursSummary__c</fullName>
        <formula>IF( Total_Hours_Budget__c &gt; 0, 
IMAGE(Status_BudgetMiletoneEstimate__c, "Hours Summary: Budgeted, Planned, Estimated and Incurred."),'')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Summary (chart)</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Status_Image_OpenVComplete__c</fullName>
        <formula>IF( Status_TasksOpenComplete__c != '',
IMAGE( Status_TasksOpenComplete__c , "Open vs. Complete Tasks") , '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks (chart)</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Status_Img_OpenLateBlocked__c</fullName>
        <formula>IMAGE( Status_TasksOpenBlockedLate__c , "Open, Late &amp; Blocked Tasks.")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks (chart)</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Status_TasksOpenBlockedLate__c</fullName>
        <formula>IF(max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) &gt; 0 , 
"http://chart.apis.google.com/chart?chtt=Open+Task+Analysis&amp;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;"&amp;
"chxr=0,0," &amp; Text(max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ))&amp;"&amp;"&amp;
"chco=2299bb,eeaa66,ee3322&amp;chdl="&amp;
"Open (" &amp; TEXT(Total_Open_Task_Count__c) &amp; ")"&amp;
"|Late (" &amp; TEXT(Total_Late_Task_Count__c) &amp; ")"&amp;
"|Blocked (" &amp; TEXT(Total_Blocked_Task_Count__c) &amp; ")"&amp;
"&amp;chd=t:"&amp; TEXT(Total_Open_Task_Count__c / max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100)&amp;"|"&amp; TEXT(Total_Late_Task_Count__c/ max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100) &amp;"|" &amp; TEXT(Total_Blocked_Task_Count__c/ max(  Total_Open_Task_Count__c ,  Total_Late_Task_Count__c  , Total_Blocked_Task_Count__c ) *100), '/s.gif')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Status_TasksOpenComplete__c</fullName>
        <formula>"http://chart.apis.google.com/chart?"&amp;
"chtt=Task+Analysis&amp;"&amp;
"chco=eeaa66,2299bb&amp;chs=300x225&amp;cht=p&amp;chd=t:"&amp;Text(Total_Open_Task_Count__c)&amp;","&amp;Text(Total_Complete_Task_Count__c)&amp;"&amp;chdl="&amp;
"Open%20Tasks (" &amp; TEXT (Total_Open_Task_Count__c) &amp; ")"&amp;
"|Complete%20Tasks (" &amp; TEXT (Total_Complete_Task_Count__c) &amp; ")"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The current status of the project.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Total_Blocked_Task_Count__c</fullName>
        <inlineHelpText>How many tasks associated with this project are blocked? (Calculated)</inlineHelpText>
        <label>Total Blocked Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Complete_Task_Count__c</fullName>
        <inlineHelpText>How many complete tasks are there in this project?  (Calculated.)</inlineHelpText>
        <label>Total Complete Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Expense_Budget__c</fullName>
        <inlineHelpText>The total expense budget for this project.</inlineHelpText>
        <label>Total Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Expense_Budget_from_Milestones__c</fullName>
        <inlineHelpText>Calculated from the milestone expense budgets assigned to this project.</inlineHelpText>
        <label>Total Expense Budget from Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Expense_Estimate__c</fullName>
        <inlineHelpText>Calculated from expense estimates on all child milestones</inlineHelpText>
        <label>Total Expense Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Expense_Incurred__c</fullName>
        <inlineHelpText>Calculated from expense records related to tasks on all child milestones</inlineHelpText>
        <label>Total Expense Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Hours_Budget__c</fullName>
        <inlineHelpText>The total hours budget for this project.</inlineHelpText>
        <label>Total Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Hours_Budget_from_Milestones__c</fullName>
        <inlineHelpText>Calculated from hours budgets for milestones in this project.</inlineHelpText>
        <label>Total Hours Budget from Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Hours_Estimate__c</fullName>
        <inlineHelpText>Calculated from hours estimates on all child milestones</inlineHelpText>
        <label>Total Hours Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Hours_Incurred__c</fullName>
        <inlineHelpText>Calculated from time records related to tasks on all child milestones</inlineHelpText>
        <label>Total Hours Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Late_Task_Count__c</fullName>
        <inlineHelpText>How many tasks associated with this project are late?  (Calculated)</inlineHelpText>
        <label>Total Late Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Open_Task_Count__c</fullName>
        <inlineHelpText>How many open tasks are there in this project? (Calculated. Includes Late and Blocked tasks.)</inlineHelpText>
        <label>Total Open Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Force.com Labs - PM - A collaborative enterprise which has a planned goal. A project can have many milestones.</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Project</label><nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Projects</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project_stage__c</columns>
        <columns>Kickoff__c</columns>
        <columns>DB_Days__c</columns>
        <columns>Deadline__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Status_Indicator__c</columns>
        <columns>Duration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Projects</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>All_Projects</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project_stage__c</columns>
        <columns>Kickoff__c</columns>
        <columns>Deadline__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Status_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>My_Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Duration__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Active Projects</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>United_Partners_Projects</fullName>
        <columns>NAME</columns>
        <columns>Deadline__c</columns>
        <columns>Project_stage__c</columns>
        <columns>Project_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>united</value>
        </filters>
        <label>United Partners Projects</label>
        <language>en_US</language>
    </listViews><validationRules>
        <fullName>Kickoff_before_deadline</fullName>
        <active>false</active>
        <description>Kickoff must be less or equal than the deadline</description>
        <errorConditionFormula>NOT(ISNULL(Kickoff__c)) &amp;&amp; NOT(ISNULL(Deadline__c)) &amp;&amp; Deadline__c &lt; Kickoff__c</errorConditionFormula>
        <errorDisplayField>Kickoff__c</errorDisplayField>
        <errorMessage>Kickoff must be less or equal than the deadline</errorMessage>
    </validationRules><validationRules>
        <fullName>Total_Expense_Budget_Negative_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Expense_Budget__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Total_Expense_Budget__c</errorDisplayField>
        <errorMessage>This value should be a positive number</errorMessage>
    </validationRules><validationRules>
        <fullName>Total_Hours_Budget_Negative_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Hours_Budget__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Total_Hours_Budget__c</errorDisplayField>
        <errorMessage>This value should be a positive number</errorMessage>
    </validationRules></CustomObject>